<resources>
    <string name="app_name">ProjetoTesteMqtt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_messages">Mensagens</string>
    <string name="nav_options">Opções</string>
    <string name="connect">Conectar</string>
    <string name="subscribe">Inscrever</string>
    <string name="publish">Publicar</string>
    <string name="status">Status</string>
    <string name="host">Host</string>
    <string name="port">Porta</string>
    <string name="client_id">Cliente ID</string>
    <string name="disconnect">Desconectar</string>
    <string name="subscribed">Assuntos Inscritos</string>
    <string name="cancel">Cancelar</string>
    <string name="subscribre_already">Assunto já inscrito</string>
    <string name="confirm">Confirmar</string>
    <string name="send">Enviar</string>
    <string name="topic">Assunto</string>
    <string name="message">Mensagem</string>
    <string name="messages">Mensagens</string>
    <string name="exit">Sair</string>

    <string name="text_connection">Conexão</string>
    <string name="connection">Conectado/Desconectado</string>
    <string name="received">Recebidas</string>
    <string name="sent">Enviadas</string>
    <string name="topics_subscribe">Assuntos Inscritos</string>
    <string name="status_application">Dados do Aplicativo</string>
    <string name="main_menu">Menu Principal</string>
    <string name="select_topic">Selecione um assunto</string>
    <string name="topics">Assuntos</string>
    <string name="about_application">Teste Mqtt</string>
    <string name="name_developer">Anderson T. F. Lourenço</string>
    <string name="email">atflourenco@gmail.com</string>
    <string name="about">Sobre</string>
    <string name="subscribre_empty">Assunto em branco.</string>
    <string name="url_server_broker">tcp://iot.eclipse.org</string>
    <string name="port_server_broker">1883</string>
    <string name="client_id_example">cell-phone-</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
</resources>
